libdrm (2.4.25-1) UNRELEASED; urgency=low

  * New upstream release.
  * Update libdrm2.symbols and shlibs.
  * Update libkms1.symbols, marking dumb_create@Base as private.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 18 Apr 2011 22:23:18 +0200

libdrm (2.4.24-2) unstable; urgency=low

  * Upload to unstable.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 10 Apr 2011 22:57:02 +0200

libdrm (2.4.24-1) experimental; urgency=low

  [ Christopher James Halse Rogers ]
  * New upstream release.
  * Add new internal radeon symbols to libkms1.symbols

  [ Cyril Brulebois ]
  * Just as a reminder, not adding a lintian override for the following
    warning, since patches were sent upstream to stop exporting private
    symbols: symbols-declares-dependency-on-other-package

 -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Mar 2011 20:27:23 +0100

libdrm (2.4.23-3) unstable; urgency=low

  * Cherry-pick from upstream:
    - intel: Fallback to old exec if no mrb_exec is available
    - intel: Set the public handle after opening by name
    - intel: Remember named bo
  * The first of those fixes should fix some failures to submit batch
    buffer (Closes: #612766).
  * Bump dependency to 2.4.23-3 for the drm_intel_bo_mrb_exec symbol in
    libdrm-intel1's symbols file. While the former version is alright
    from a shared object point of view, runtime doesn't seem to agree
    (Closes: #609299).
  * Bump the libdrm-intel1 shlibs version for consistency.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 16 Feb 2011 11:44:44 +0100

libdrm (2.4.23-2) unstable; urgency=low

  * Upload to unstable.
  * Update Uploaders list. Thanks, David & Brice!

 -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Feb 2011 11:26:44 +0100

libdrm (2.4.23-1) experimental; urgency=low

  [ Sven Joachim ]
  * New upstream release.
  * Rename the libdrm-nouveau1 package to libdrm-nouveau1a, since upstream
    broke the ABI without changing the soname.