@@ -3,12 +3,10 @@ Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: Cyril Brulebois <kibi@debian.org>
 Build-Depends:
- debhelper (>= 7.2.7),
+ debhelper (>= 8),
+ dh-autoreconf,
+ quilt,
  libx11-dev,
- dpkg-dev (>= 1.13.19),
- quilt (>= 0.40),
- automake,
- libtool,
  pkg-config,
  libpthread-stubs0-dev,
 Standards-Version: 3.8.4
