@@ -3,6 +3,11 @@ libdrm (2.4.25-1) UNRELEASED; urgency=low
   * New upstream release.
   * Update libdrm2.symbols and shlibs.
   * Update libkms1.symbols, marking dumb_create@Base as private.
+  * Switch to dh:
+    - Bump compat/build-dep to 8.
+    - Use dh-autoreconf.
+    - Tidy old build-deps.
+    - Testsuite now automatically gets run.
 
  -- Cyril Brulebois <kibi@debian.org>  Mon, 18 Apr 2011 22:23:18 +0200
 
